# barter-rs-harry

./: all_changes.patch  claude.md  monitor_analysis.md  test_all_exchanges.rs
barter-data/examples/: monitor_demo.rs  monitor_demo_improved.rs  simple_test_all_exchanges.rs  test_all_exchanges.rs
barter/src/: logging.rs
crypto-monitor/: .env.example  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.migrate  Dockerfile.migrate.simple  Makefile  README.md  docker-compose.cloudflare.yml  docker-compose.dev.yml  docker-compose.yml
crypto-monitor/cloudflare/: README.md  config.yml  deploy.sh  nginx.conf  setup-tunnel.md
crypto-monitor/docker-build-context/: Dockerfile  config.example.yaml
crypto-monitor/docker-build-context/monitor-anomaly/: Cargo.toml
crypto-monitor/docker-build-context/monitor-anomaly/src/: analyzer.rs  detector.rs  lib.rs
crypto-monitor/docker-build-context/monitor-api/src/: handlers.rs  lib.rs  websocket.rs
crypto-monitor/docker-build-context/monitor-app/: Cargo.toml
crypto-monitor/docker-build-context/monitor-core/: Cargo.toml
crypto-monitor/docker-build-context/monitor-core/src/: engine.rs  lib.rs  storage.rs
crypto-monitor/docker-build-context/monitor-notifier/: Cargo.toml
crypto-monitor/docker-build-context/monitor-notifier/src/: manager.rs  sms.rs  telegram.rs  wechat.rs
crypto-monitor/docker-build-context/monitor-trader/: Cargo.toml
crypto-monitor/docker-build-context/monitor-trader/src/: executor.rs  lib.rs  strategy.rs
crypto-monitor/migrations/: 001_initial_schema.sql
crypto-monitor/monitor-anomaly/src/: metrics.rs
crypto-monitor/monitor-api/: Cargo.toml
crypto-monitor/monitor-api/src/: server.rs  state.rs
crypto-monitor/monitor-app/src/: main.rs
crypto-monitor/monitor-config/: Cargo.toml
crypto-monitor/monitor-config/src/: lib.rs
crypto-monitor/monitor-core/src/: event.rs  model.rs  stream.rs
crypto-monitor/monitor-notifier/src/: email.rs  lib.rs
crypto-monitor/monitor-trader/src/: risk.rs
crypto-monitor/nginx/: nginx.conf
crypto-monitor/prometheus/: prometheus.yml
crypto-monitor/scripts/: docker-build.sh  entrypoint.sh  fix-docker-build.sh  healthcheck.sh  test-api.sh
crypto-monitor/test/: api-test-collection.json  postman-collection.json  quick-test.md
