[workspace]
members = [
    "monitor-core",
    "monitor-anomaly",
    "monitor-api",
    "monitor-notifier",
    "monitor-trader",
    "monitor-config",
    "monitor-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crypto Monitor Team"]
license = "MIT"

[workspace.dependencies]
# Barter dependencies
barter = { path = "../barter" }
barter-data = { path = "../barter-data" }
barter-execution = { path = "../barter-execution" }
barter-integration = { path = "../barter-integration" }
barter-instrument = { path = "../barter-instrument" }

# Fluvio for event streaming
fluvio = "0.21"
fluvio-future = "0.6"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Notifications
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lettre = "0.11"
twilio = "0.1"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.0"

# Mathematical operations
statrs = "0.17"
ta = "0.5"