[package]
name = "monitor-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
monitor-anomaly = { path = "../monitor-anomaly" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

fluvio = { workspace = true }
sqlx = { workspace = true }

tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

uuid = { workspace = true }
dashmap = { workspace = true }