[package]
name = "monitor-anomaly"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }

fluvio = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }

statrs = { workspace = true }
ta = { workspace = true }