[package]
name = "monitor-notifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
monitor-anomaly = { path = "../monitor-anomaly" }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
lettre = { workspace = true }

tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }